[package]
name = "queuey"
version = "0.0.1"
authors = ["don <donovandall@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pretty_env_logger = "0.4.0"
notify = "4.0"
structopt = "0.3.21"
rand = "0.7.3"
fs_extra = "1.2.0"
rayon = "1.5.0"
kube = "0.43.0"
kube-runtime = "0.43.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0.60"
serde_yaml = "0.8.14"
futures = "0.3.8"
anyhow = "1.0.37"